Fix swagger documentation and return generic message in login response
